Ansible/Proxmox-VE/K3s/Vaultwarden/5.vw-service.yaml
# vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
