Ansible/Proxmox-VE/K3s/Vaultwarden/vw-service.yaml
# vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - protocol: TCP
      port: 80
      targetPort: 31443
  type: NodePort
